--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ header-img: img/home-bg.jpg
 email: resulycheng@gmail.com
 description: ""
 keyword: "resuly"
-url: "resuly.github.io"  # your host, for absolute URL
+url: "resuly.me"  # your host, for absolute URL
 baseurl: ""        # for example, '/blog' if your blog hosted on 'host/blog'
 
 # SNS settings
@@ -38,7 +38,7 @@ kramdown:
   input: GFM                            # use Github Flavored Markdown !important
 
 # Disqus settings
-#disqus_username: _your_disqus_short_name_
+disqus_username: resuly
 
 # Duoshuo settings
 # duoshuo_username: huxblog
@@ -47,7 +47,7 @@ kramdown:
 
 # Analytics settings
 # Baidu Analytics
-# ba_track_id: [your track id]
+ba_track_id: [d357403d92113a4faf6736dd0989a910]
 
 # Google Analytics
 #ga_track_id: 'UA-49627206-1'            # Format: UA-xxxxxx-xx
