--- a/_config.yml
+++ b/_config.yml
@@ -38,12 +38,12 @@ kramdown:
   input: GFM                            # use Github Flavored Markdown !important
 
 # Disqus settings
-disqus_username: resuly
+# disqus_username: resuly
 
 # Duoshuo settings
 # duoshuo_username: huxblog
 # Share component is depend on Comment so we can NOT use share only.
-# duoshuo_share: true                     # set to false if you want to use Comment without Sharing
+# duoshuo_share: true   # set to false if you want to use Comment without Sharing
 
 # Analytics settings
 # Baidu Analytics
