--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: Resuly's Blog
-SEOTitle: Resuly Blog | resuly 博客
+SEOTitle: Resuly's Blog | resuly 博客
 header-img: img/home-bg.jpg
 email: resulycheng@gmail.com
 description: ""
