--- a/_config.yml
+++ b/_config.yml
@@ -35,24 +35,18 @@ gems: [jekyll-paginate]
 # document: http://jekyllrb.com/docs/configuration/#kramdown
 markdown: kramdown
 kramdown:
-  input: GFM                            # use Github Flavored Markdown !important
+  input: GFM   # use Github Flavored Markdown !important
 
 # Disqus settings
-# disqus_username: resuly
-
-# Duoshuo settings
-# duoshuo_username: huxblog
-# Share component is depend on Comment so we can NOT use share only.
-# duoshuo_share: true   # set to false if you want to use Comment without Sharing
+disqus_username: resuly
 
 # Analytics settings
 # Baidu Analytics
 ba_track_id: [d357403d92113a4faf6736dd0989a910]
 
 # Google Analytics
-#ga_track_id: 'UA-49627206-1'            # Format: UA-xxxxxx-xx
-#ga_domain: huangxuan.me
-
+#ga_track_id: 'UA-xxxxxx-xx'            # Format: UA-xxxxxx-xx
+#ga_domain: resuly.me
 
 
 # Sidebar settings
@@ -61,17 +55,14 @@ sidebar-about-description: ""
 sidebar-avatar: /img/avatar-resuly.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
-
 # Featured Tags
 featured-tags: false                     # whether or not using Feature-Tags
 featured-condition-size: 1              # A tag will be featured if the size of it is more than this condition value
 
 
-
 # Progressive Web Apps
 chrome-tab-theme-color: "#000000"
 service-worker: true
-
 
 # Friends
 friends: [
