--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ zhihu_username:     resuly
 github_username:    resuly
 # twitter_username:   resulyy
 #facebook_username:  xxxx
-linkedin_username:  bo-wang-91617a5a
+linkedin_username:  resuly
 
 # Build settings
 # from 2016, 'pygments' is unsupported on GitHub Pages. Use 'rouge' for highlighting instead.
