--- a/_config.yml
+++ b/_config.yml
@@ -75,3 +75,15 @@ friends: [
         href: "http://aerolith.ink/"
     }
 ]
+
+atom:
+  buildCommand:
+    - jekyll
+    - build
+    - --option
+    - --this
+  buildEnv:
+    JEKYLL_ENV: development
+  postDirs:
+    - _newsletters
+  defaultPostDir: _posts
