--- a/_config.yml
+++ b/_config.yml
@@ -73,6 +73,10 @@ friends: [
     {
         title: "Aaron",
         href: "http://aerolith.ink/"
+    },
+    {
+        title: "Xinyuan",
+        href: "https://chnxyu.github.io/"
     }
 ]
 
